labdapr/pythonapp/openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pythonapp
  labels:
    app: pythonapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pythonapp
  template:
    metadata:
      labels:
        app: pythonapp
    spec:
      containers:
      - name: pythonapp
        image: <your-docker-image>
        ports:
        - containerPort: 5000
        command: ["python", "src/app.py"]
