labdapr/pythonapp/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: pythonapp-route
spec:
  to:
    kind: Service
    name: pythonapp-service
  port:
    targetPort: http
  wildcardPolicy: None
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
